# acme_azure

./: .bashrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  multicz.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-rewrite.yml  terragrunt-apply.yml  terragrunt-plan.yml
.multicz/: state.json
azure/: CHANGELOG.md  terragrunt.hcl
azure/hub/network/: terragrunt.hcl
azure/hub/runners/: terragrunt.hcl
azure/hub/storage-endpoints/: terragrunt.hcl
configs/: config.dev.yaml  config.hub.yaml  dev.CHANGELOG.md  hub.CHANGELOG.md
docs/: changelog.md  index.md
modules/: README.md
modules/_template/: CHANGELOG.md  main.tf  outputs.tf  variables.tf
modules/_template/tests/: main.tftest.hcl
modules/hub-network/: CHANGELOG.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/hub-network/tests/: network.tftest.hcl
modules/hub-runners/: CHANGELOG.md  cloud-init.sh.tftpl  main.tf  outputs.tf  variables.tf  versions.tf
modules/hub-runners/tests/: runners.tftest.hcl
modules/hub-storage-endpoints/: CHANGELOG.md  main.tf  outputs.tf  variables.tf
modules/hub-storage-endpoints/tests/: storage_endpoints.tftest.hcl
scripts/: add_license_header.py  bootstrap-runner.sh  bootstrap-storage.sh  rewrite-dependabot-commit.sh
