# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Chris <goabonga@pm.me>

[project]
name = "acme-azure-docs"
version = "0.0.0"
description = "ACME Azure landing zone — documentation toolchain."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]
doc = [
    "zensical>=0.0.51",
]
